--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gatsby-remark-twitter-cards",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Gatsby Remark plugin for generating Twitter Open Graph cards",
   "repository": "https://github.com/alessbell/gatsby-remark-twitter-cards",
+  "registry": "https://npm.pkg.github.com/",
   "author": "Alessia Bellisario",
   "license": "MIT",
   "private": false,
